# test-stack-with-global-libs

./: LICENSE  README.md  stack.yaml  test-stack-with-global-libs.cabal
.github/workflows/: check.yml
src/: Main.hs
