cabal-version:       2.2
name:                test-stack-with-global-libs
version:             0.1.0
synopsis:            test-stack-with-global-libs project
description:
        Short paragraph here
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2025  Jens Petersen <juhpetersen@gmail.com>
category:            Unclassified
homepage:            https://github.com/juhp/test-stack-with-global-libs
bug-reports:         https://github.com/juhp/test-stack-with-global-libs/issues
build-type:          Simple
extra-doc-files:     README.md
--                       ChangeLog.md
-- tested-with:         GHC == 8.10.7
--                       || == 9.0.2
--                       || == 9.2.8
--                       || == 9.4.8
--                       || == 9.6.5
--                       || == 9.8.2

source-repository head
  type:                git
  location:            https://github.com/juhp/test-stack-with-global-libs.git

executable test-stack-with-global-libs
  main-is:             Main.hs
--  other-modules:       Paths_test_stack_with_global_libs
--  autogen-modules:     Paths_test_stack_with_global_libs
  hs-source-dirs:      src
  build-depends:       base < 5,
                       attoparsec-aeson
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
